fixed contact box not being aligned

--- a/Website/PortfolioStyle.css
+++ b/Website/PortfolioStyle.css
@@ -174,6 +174,14 @@ button.ScrollDownButton1:hover~#hr-nav{
     height: 1000px;
 }
 
+textarea, input{
+    width: 300px;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+
 .ScrollBar{
     background-color: #353535;
 
